--- a/css/Cat_ShoppingStore_cart.css
+++ b/css/Cat_ShoppingStore_cart.css
@@ -756,7 +756,7 @@ p {
 
 .signUpLightbox .formShape form label small {
   font-size: 12px;
-  color: rgba(245, 245, 245, 0.7);
+  color: rgba(255, 255, 255, 0.9);
 }
 
 .signUpLightbox .formShape form .formBtn {
@@ -780,10 +780,13 @@ p {
 }
 
 .signUpLightbox .formShape form input {
+  color: #fff;
+  padding-left: 4px;
   border: none;
   background-color: transparent;
   border-bottom: 1px solid rgba(245, 245, 245, 0.7);
   width: 100%;
+  transition: 1s;
 }
 
 .signUpLightbox .formShape form input:-ms-input-placeholder {
@@ -816,6 +819,11 @@ p {
   color: rgba(245, 245, 245, 0.7);
   font-style: italic;
   font-size: 12px;
+}
+
+.signUpLightbox .formShape form input:focus {
+  border-bottom: 1px solid #eaaf88;
+  transition: 1s;
 }
 
 .signUpLightbox .formShape form #userPhoto {
