--- a/css/Cat_ShoppingStore_product.css
+++ b/css/Cat_ShoppingStore_product.css
@@ -826,7 +826,7 @@ input.qtyminus:hover {
 
 .signUpLightbox .formShape form label small {
   font-size: 12px;
-  color: rgba(245, 245, 245, 0.7);
+  color: rgba(255, 255, 255, 0.9);
 }
 
 .signUpLightbox .formShape form .formBtn {
@@ -850,10 +850,13 @@ input.qtyminus:hover {
 }
 
 .signUpLightbox .formShape form input {
+  color: #fff;
+  padding-left: 4px;
   border: none;
   background-color: transparent;
   border-bottom: 1px solid rgba(245, 245, 245, 0.7);
   width: 100%;
+  transition: 1s;
 }
 
 .signUpLightbox .formShape form input:-ms-input-placeholder {
@@ -886,6 +889,11 @@ input.qtyminus:hover {
   color: rgba(245, 245, 245, 0.7);
   font-style: italic;
   font-size: 12px;
+}
+
+.signUpLightbox .formShape form input:focus {
+  border-bottom: 1px solid #eaaf88;
+  transition: 1s;
 }
 
 .signUpLightbox .formShape form #userPhoto {
