--- a/css/catSearch.css
+++ b/css/catSearch.css
@@ -601,7 +601,7 @@ header.active {
 
 .signUpLightbox .formShape form label small {
   font-size: 12px;
-  color: rgba(245, 245, 245, 0.7);
+  color: rgba(255, 255, 255, 0.9);
 }
 
 .signUpLightbox .formShape form .formBtn {
@@ -625,10 +625,13 @@ header.active {
 }
 
 .signUpLightbox .formShape form input {
+  color: #fff;
+  padding-left: 4px;
   border: none;
   background-color: transparent;
   border-bottom: 1px solid rgba(245, 245, 245, 0.7);
   width: 100%;
+  transition: 1s;
 }
 
 .signUpLightbox .formShape form input:-ms-input-placeholder {
@@ -661,6 +664,11 @@ header.active {
   color: rgba(245, 245, 245, 0.7);
   font-style: italic;
   font-size: 12px;
+}
+
+.signUpLightbox .formShape form input:focus {
+  border-bottom: 1px solid #eaaf88;
+  transition: 1s;
 }
 
 .signUpLightbox .formShape form #userPhoto {
@@ -1050,6 +1058,14 @@ body {
   transition: all 0.35s ease-in-out;
   z-index: -1;
   position: relative;
+  image-rendering: optimizeSpeed;
+  image-rendering: -moz-crisp-edges;
+  image-rendering: -o-crisp-edges;
+  image-rendering: -webkit-optimize-contrast;
+  image-rendering: optimize-contrast;
+  -ms-interpolation-mode: nearest-neighbor;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
 .right .container1 .catPic .catItem .catContent .img img {
@@ -1057,25 +1073,26 @@ body {
 }
 
 .right .container1 .catPic .catItem .catContent:hover .img {
-  -webkit-transform: translateY(-40px);
-  -moz-transform: translateY(-40px);
-  -ms-transform: translateY(-40px);
-  -o-transform: translateY(-40px);
-  transform: translateY(-40px);
+  -webkit-transform: translateY(-30px);
+  -moz-transform: translateY(-30px);
+  -ms-transform: translateY(-30px);
+  -o-transform: translateY(-30px);
+  transform: translateY(-30px);
 }
 
 .right .container1 .catPic .catItem .catContent:hover .quickView {
   visibility: visible;
   opacity: 1;
-  -webkit-transform: translateY(-2px);
-  -moz-transform: translateY(-2px);
-  -ms-transform: translateY(-2px);
-  -o-transform: translateY(-2px);
-  transform: translateY(-2px);
+  -webkit-transform: translateY(0px);
+  -moz-transform: translateY(0px);
+  -ms-transform: translateY(0px);
+  -o-transform: translateY(0px);
+  transform: translateY(0px);
 }
 
 .right .container1 .catPic .catItem .quickView {
   position: absolute;
+  letter-spacing: 2px;
   left: 0;
   bottom: 0px;
   width: 100%;
