--- a/css/forum.css
+++ b/css/forum.css
@@ -913,7 +913,7 @@ h1 {
 
 .signUpLightbox .formShape form label small {
   font-size: 12px;
-  color: rgba(245, 245, 245, 0.7);
+  color: rgba(255, 255, 255, 0.9);
 }
 
 .signUpLightbox .formShape form .formBtn {
@@ -937,10 +937,13 @@ h1 {
 }
 
 .signUpLightbox .formShape form input {
+  color: #fff;
+  padding-left: 4px;
   border: none;
   background-color: transparent;
   border-bottom: 1px solid rgba(245, 245, 245, 0.7);
   width: 100%;
+  transition: 1s;
 }
 
 .signUpLightbox .formShape form input:-ms-input-placeholder {
@@ -973,6 +976,11 @@ h1 {
   color: rgba(245, 245, 245, 0.7);
   font-style: italic;
   font-size: 12px;
+}
+
+.signUpLightbox .formShape form input:focus {
+  border-bottom: 1px solid #eaaf88;
+  transition: 1s;
 }
 
 .signUpLightbox .formShape form #userPhoto {
