--- a/css/index.css
+++ b/css/index.css
@@ -614,13 +614,13 @@ header.active {
 }
 
 .banner .search select {
-  background-color: rgba(255, 255, 255, 0.308);
+  background-color: rgba(255, 255, 255, 0.6);
   border: 3px solid #fff;
   border-radius: 40px;
   text-align-last: center;
   padding: 3px 6px;
   font-size: 18px;
-  color: #333;
+  color: #222222;
   cursor: pointer;
 }
 
@@ -633,7 +633,7 @@ header.active {
   -moz-appearance: none;
   -webkit-appearance: none;
   margin: 15px auto;
-  background-color: rgba(255, 255, 255, 0.308);
+  background-color: rgba(255, 255, 255, 0.6);
   border: 3px solid #fff;
   letter-spacing: 2px;
   border-radius: 40px;
@@ -1478,7 +1478,7 @@ footer {
 
 .signUpLightbox .formShape form label small {
   font-size: 12px;
-  color: rgba(245, 245, 245, 0.7);
+  color: rgba(255, 255, 255, 0.9);
 }
 
 .signUpLightbox .formShape form .formBtn {
@@ -1502,10 +1502,13 @@ footer {
 }
 
 .signUpLightbox .formShape form input {
+  color: #fff;
+  padding-left: 4px;
   border: none;
   background-color: transparent;
   border-bottom: 1px solid rgba(245, 245, 245, 0.7);
   width: 100%;
+  transition: 1s;
 }
 
 .signUpLightbox .formShape form input:-ms-input-placeholder {
@@ -1538,6 +1541,11 @@ footer {
   color: rgba(245, 245, 245, 0.7);
   font-style: italic;
   font-size: 12px;
+}
+
+.signUpLightbox .formShape form input:focus {
+  border-bottom: 1px solid #eaaf88;
+  transition: 1s;
 }
 
 .signUpLightbox .formShape form #userPhoto {
