--- a/css/halfMem.css
+++ b/css/halfMem.css
@@ -842,6 +842,16 @@ header ul li:nth-child(5):after {
   box-shadow: 0 0 10px #8d5b33;
 }
 
+.right .content input[type=radio]:focus {
+  border: none;
+  box-shadow: none;
+}
+
+.right .content input[type=file]:focus {
+  border: none;
+  box-shadow: none;
+}
+
 .right .content textarea {
   resize: none;
 }
