--- a/sass/modules/_halfMem.scss
+++ b/sass/modules/_halfMem.scss
@@ -54,10 +54,22 @@
         width: 76%;
         float: left;
         padding-bottom: 50px;
-        input {
+        input{
             &:focus {
                 border: 1px solid #EAAF88;
                 box-shadow: 0 0 10px rgb(141, 91, 51);
+            }
+        }
+        input[type=radio]{
+            &:focus {
+                border: none;
+                box-shadow: none;
+            }
+        }
+        input[type=file]{
+            &:focus {
+                border: none;
+                box-shadow: none;
             }
         }
         textarea {
