--- a/sass/modules/_halfMem.scss
+++ b/sass/modules/_halfMem.scss
@@ -80,6 +80,9 @@
                 height: 200px;
             }
         }
+        th{
+            vertical-align: middle;
+        }
         h4 {
             text-align: center;
             font-size: $font-size-h3;
