--- a/css/halfMem.css
+++ b/css/halfMem.css
@@ -862,6 +862,10 @@ header ul li:nth-child(5):after {
   height: 200px;
 }
 
+.right .content th {
+  vertical-align: middle;
+}
+
 .right .content h4 {
   text-align: center;
   font-size: 24px;
