--- a/sass/backProduct.scss
+++ b/sass/backProduct.scss
@@ -30,6 +30,12 @@
                 max-width: 1000px;
             }
         }
+        h4 {
+            text-align: center;
+            font-size: $font-size-h3;
+            margin: 30px 0;
+            font-weight: bold;
+        }
         .adoptInfomation {
             width: 80%;
             margin: 100px auto 100px;
@@ -44,7 +50,7 @@
             .newEmpTROn {
                 display: table-row;
             }
-            .newblock{
+            .newblock {
                 display: block;
             }
             table {
@@ -78,11 +84,19 @@
                             display: inline-block;
                             text-align: center;
                         }
+                        span {
+                            display: block;
+                            border: 1px dashed #EAAF88;
+                            .filePic {
+                                height: 120px;                            
+                            }
+                        }
                     }
                     th {
                         font-size: $font-size-large;
                         letter-spacing: 2px;
                         font-weight: bold;
+                        vertical-align: middle;
                     }
                 }
             }
