--- a/css/forum-p1.css
+++ b/css/forum-p1.css
@@ -378,8 +378,15 @@ body {
 }
 
 h1 {
-  font-size: 28px;
-  padding-top: 50px;
+  font-size: 36px;
+  font-weight: bold;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  line-height: 26px;
+  letter-spacing: 15px;
+  text-align: center;
+  padding: 5%;
+  margin: 0;
   transition: .3s;
 }
 
@@ -388,16 +395,29 @@ h2 {
   font-size: 24px;
   padding-bottom: 20px;
   border-bottom: 1px solid #ccc;
+  color: #EAAF88;
 }
 
 .container {
   padding: 2%;
-  background-color: rgba(255, 255, 255, 0.6);
-  border: 2px solid #ccc;
+  background-color: rgba(255, 255, 255, 0.808);
+  border: 4px solid #666;
   max-width: 991px;
   width: 100%;
   margin: 0 auto;
-  margin-top: 3%;
+  margin-top: 2%;
+}
+
+.pobox {
+  margin-bottom: 8%;
+}
+
+.pobox .post-header .post-ab {
+  text-align: right;
+}
+
+.rebox {
+  border: 2px solid #EAAF88;
 }
 
 .post-ab {
@@ -413,7 +433,6 @@ h2 {
   text-align: left;
   padding: 2%;
   margin-top: 2%;
-  letter-spacing: 7px;
   line-height: 28px;
 }
 
@@ -431,6 +450,9 @@ h2 {
 @media screen and (max-width: 991px) {
   header {
     display: none;
+  }
+  .container {
+    width: 80%;
   }
 }
 
