--- a/css/forum.css
+++ b/css/forum.css
@@ -549,7 +549,15 @@ header {
 }
 
 h1 {
-  font-size: 28px;
+  font-size: 36px;
+  font-weight: bold;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  line-height: 26px;
+  letter-spacing: 15px;
+  text-align: center;
+  padding: 5%;
+  margin: 0;
   transition: .3s;
 }
 
@@ -579,6 +587,7 @@ h1 {
 
 .forum-list {
   margin-top: 5%;
+  margin-bottom: 9%;
 }
 
 .forum-list li {
@@ -599,7 +608,7 @@ h1 {
 }
 
 .post-list {
-  background-color: rgba(255, 255, 255, 0.6);
+  background-color: rgba(255, 255, 255, 0.801);
   padding: 5%;
   width: 40%;
   border: 2px solid #ccc;
@@ -710,9 +719,9 @@ h1 {
 
 @media screen and (min-width: 652px) {
   .po-list {
-    margin: 0 3%;
+    margin-bottom: 3%;
     padding: 2%;
-    background-color: rgba(255, 255, 255, 0.6);
+    background-color: rgba(255, 255, 255, 0.801);
     border: 1px solid rgba(0, 0, 0, 0.1);
   }
   .po-title {
@@ -734,7 +743,7 @@ h1 {
   }
   .po-time {
     display: inline-block;
-    width: 34%;
+    width: 30%;
     text-align: right;
   }
   .po-time span {
