--- a/sass/modules/_forum-p1.scss
+++ b/sass/modules/_forum-p1.scss
@@ -12,7 +12,6 @@
   *zoom:1;
 }
 
-
 body {
   background-image: url(../images/marble.jpg);
   background-attachment: fixed;
@@ -29,8 +28,15 @@ body {
 }
 
 h1 {
-  font-size: 28px;
-  padding-top: 50px;
+  font-size: 36px;
+  font-weight: bold;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  line-height: 26px;
+  letter-spacing: 15px;
+  text-align: center;
+  padding: 5%;
+  margin: 0;
   transition: .3s;
 }
 
@@ -39,18 +45,30 @@ h2 {
   font-size: 24px;
   padding-bottom: 20px;
   border-bottom: 1px solid #ccc;
+  color: #EAAF88;
 }
 
 .container {
   padding: 2%;
-  background-color: rgba(255, 255, 255, 0.6);
-  border: 2px solid #ccc;
+  background-color: rgba(255, 255, 255, 0.808);
+  border: 4px solid #666;
   max-width: 991px;
   width: 100%;
   margin: 0 auto;
-  margin-top: 3%;
+  margin-top: 2%;
 }
 
+.pobox {
+  margin-bottom: 8%;
+  .post-header {
+    .post-ab {
+      text-align: right;
+    }
+  }
+}
+.rebox {
+  border: 2px solid #EAAF88;
+}
 .post-ab {
   text-align: left;
   span {
@@ -63,7 +81,6 @@ h2 {
   text-align: left;
   padding: 2%;
   margin-top: 2%;
-  letter-spacing: 7px;
   line-height: 28px;
 }
 
@@ -82,6 +99,9 @@ h2 {
   header {
     display: none;
   }
+  .container{
+    width: 80%;
+  }
 }
 
 @media screen and (max-width: 651px) {
@@ -92,6 +112,7 @@ h2 {
     font-size: 18px;
   }
 }
+
 
 //
 .postfrom {
@@ -123,6 +144,7 @@ h2 {
     width: 99.9%;
   }
 }
+
 .btns {
   margin: 1%;
   text-align: right;
