--- a/sass/modules/_forum.scss
+++ b/sass/modules/_forum.scss
@@ -39,7 +39,15 @@
       //   z-index: 9999;
       // }
       h1 {
-        font-size: 28px;
+        font-size: 36px;
+        font-weight: bold;
+        margin-top: 10px;
+        margin-bottom: 20px;
+        line-height: 26px;
+        letter-spacing: 15px;
+        text-align: center;
+        padding: 5%;
+        margin: 0;
         transition: .3s;
       }
 
@@ -60,6 +68,7 @@
 
       .forum-list {
         margin-top: 5%;
+        margin-bottom: 9%;
         li {
           letter-spacing: 2px;
           padding: 20px 0;
@@ -78,7 +87,7 @@
       }
 
       .post-list {
-        background-color: rgba(255, 255, 255, 0.6);
+        background-color: rgba(255, 255, 255, 0.801);
         padding: 5%;
         width: 40%;
         border: 2px solid #ccc;
@@ -185,9 +194,9 @@
           }
         } // 
         .po-list {
-          margin: 0 3%;
+          margin-bottom: 3%;
           padding: 2%;
-          background-color: rgba(255, 255, 255, 0.6);
+          background-color: rgba(255, 255, 255, 0.801);
           border: 1px solid rgba(0, 0, 0, 0.1);
         }
         .po-title {
@@ -209,7 +218,7 @@
         }
         .po-time {
           display: inline-block;
-          width: 34%;
+          width: 30%;
           text-align: right;
           span {
             margin: 0 5%;
