--- a/sass/modules/_header.scss
+++ b/sass/modules/_header.scss
@@ -18,6 +18,9 @@ header {
         img {
             width: 90%;
         }
+        h1{
+            padding: 5%;
+        }
     }
     ul {
         position: absolute;
