--- a/sass/modules/_guide.scss
+++ b/sass/modules/_guide.scss
@@ -8,7 +8,7 @@
     to{transform: perspective(600px) translateY(-50px) translateZ(100px);}
 }
 body{
-    background-image: url(../images/test.jpg);
+    background-image: url(../images/marble.jpg);
 
 }
 .svg-space{
@@ -21,7 +21,7 @@ body{
     align-items: center;
     #logo{
         margin: auto;
-        width: 450px;
+        width: 250px;
         height: 450px;
     }
 }
