--- a/css/guide.css
+++ b/css/guide.css
@@ -74,7 +74,7 @@ body {
     transform: perspective(600px) translateY(-50px) translateZ(100px); } }
 
 body {
-  background-image: url(../images/test.jpg); }
+  background-image: url(../images/marble.jpg); }
 
 .svg-space {
   height: 20vh;
@@ -86,7 +86,7 @@ body {
   align-items: center; }
   .svg-space #logo {
     margin: auto;
-    width: 450px;
+    width: 250px;
     height: 450px; }
 
 .guide {
