--- a/sass/modules/_Cat_ShoppingStore_product.scss
+++ b/sass/modules/_Cat_ShoppingStore_product.scss
@@ -159,7 +159,7 @@ hr{
 
 .price{
     font-size: 25px;
-    margin: 30px 0 130px 0;
+    margin: 20% 0 5% 0;
     color: #333333 ;
 }
 
@@ -171,7 +171,7 @@ hr{
     }
 
     .price{
-        margin: 30px 0 30px 0;
+        margin: 10% 0;
     }
 }
 
@@ -221,22 +221,23 @@ input.qtyminus:hover{
 .addButton{
     border: 2px solid #333333;
     background-color: transparent;
-    height: 40px;
-    width: 150px;
     border-radius: 100px;
     cursor: pointer;
-    letter-spacing: 3px;
-    margin: 30px 10px 60px 0;
     float: left;
     text-align: center;
-    padding-top: 3px;
     color: #333333;
+    margin: 5% 0;
+    padding: 1% 5%;
 }
 
 .addButton:hover{
     color: #fff;
 	background-color: #EAAF88;
-	border: 1px solid #EAAF88;
+	border: 2px solid #EAAF88;
+}
+
+.cartBtn{
+    margin-right: 3%;
 }
 
 
@@ -256,4 +257,15 @@ input.qtyminus:hover{
 
 .productDetail img{
     width: 100%;
+    margin-top: 5%;
+}
+
+@media only screen and (max-width: 991px){
+    .productDetail img{
+        margin-top: 10%;
+    }
+
+    #myform{
+        margin: 10% 0;
+    }
 }
