--- a/sass/modules/_Cat_ShoppingStore_cart.scss
+++ b/sass/modules/_Cat_ShoppingStore_cart.scss
@@ -85,6 +85,17 @@ table{
 .confirm{
     text-align: center;
     margin-top: 5%;
+    
+}
+
+td .confirm{
+    border-radius: 100px;
+    cursor: pointer;
+	letter-spacing: 3px;
+	padding: 2% 8% 2% 10%;
+    border: 2px solid #333333;
+	background-color: transparent;
+	color: #333;
 }
 
 .pay{
@@ -143,32 +154,3 @@ p{
     border:2px solid #333;
     border-radius: 100px;
 }
-
-/* @media only screen and (max-width: 768px){
-
-    .itemHead td{
-        display: block;
-    }
-    
-    .tdTitle {
-        display: none;
-    }
-
-    .itemHead:nth-child(1):before{
-        content: '商品';
-    }
-
-    .itemHead:nth-child(2):before{
-        content: '價錢';
-    }
-
-    .itemHead:nth-child(3):before{
-        content: '數量';
-    }
-
-    .itemHead:nth-child(4):before{
-        content: '刪除';
-    }
-
-    
-} */
