--- a/sass/backIndex.scss
+++ b/sass/backIndex.scss
@@ -4,17 +4,18 @@
 body {
     background-image: url('../images/back/backIMG.jpg');
     background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center center;
+    height: 80vh;
     background-size: cover;
 }
-
+.block {
+    text-align: center;
+}
 .loginBox {
     width: 300px;
-    height: 200px;
-    position: fixed;
-    top: 50%;
-    margin-top: -200px;
-    left: 50%;
-    margin-left: -150px;
+    margin: 0 auto;
+    margin-top: 20%;
     text-align: center;
     background-color: rgba(238, 238, 238, 0.9);
     border-radius: 10px;
@@ -29,5 +30,13 @@ body {
         margin-top: 6px;
         padding: 2px 12px;
         font-size: $font-size-small;
+    }
+}
+@media screen and (max-width: 600px) {
+    body {
+        background-position: left center;
+    }
+     .loginBox {
+        margin-top: 35%;
     }
 }
