--- a/sass/modules/_forum.scss
+++ b/sass/modules/_forum.scss
@@ -60,6 +60,9 @@
     max-width: 991px;
     margin: 0 auto;
   }
+  .containerLast{
+    margin-bottom: 80px;
+  }
 
   .row {
     margin: 80px auto;
@@ -277,7 +280,7 @@
 
   .postfrom {
     max-width: 991px;
-    width: 100%;
+    width: 90%;
     margin: 2% auto;
     background-color: red;
     text-align: left;
