--- a/css/Cat_ShoppingStore.css
+++ b/css/Cat_ShoppingStore.css
@@ -488,9 +488,6 @@ h2 {
   margin: 3% 0;
   width: 100%; }
 
-.select {
-  float: left; }
-
 .search {
   float: right; }
 
@@ -510,6 +507,18 @@ h2 {
   border: 2px solid #EAAF88;
   background-color: #EAAF88; }
 
+@media only screen and (max-width: 991px) {
+  .search {
+    float: none; }
+  .search input {
+    width: 93%; }
+  .br {
+    display: none; } }
+
+@media only screen and (max-width: 767px) {
+  .search input {
+    width: 87%; } }
+
 .allTitle {
   text-align: center;
   padding: 2%; }
@@ -517,6 +526,9 @@ h2 {
 .allProduct {
   /* background-color: #ccc; */
   margin-top: 1%; }
+
+.type1 {
+  float: none; }
 
 .typeName {
   float: left;
@@ -528,7 +540,8 @@ h2 {
   box-sizing: border-box;
   text-align: center;
   margin-right: 1%;
-  font-size: 18px; }
+  font-size: 18px;
+  clear: both; }
 
 .typeBanner {
   float: left;
@@ -550,8 +563,8 @@ h2 {
   .typeName {
     float: none;
     width: 100%;
-    background-color: transparent;
-    color: #333; }
+    background-color: #EAAF88;
+    color: #fff; }
   .typeBanner {
     display: none; }
   .typeBannerRWD {
@@ -646,7 +659,7 @@ h2 {
 @media only screen and (max-width: 767px) {
   .product {
     width: 40%;
-    margin: 5%; } }
+    margin: 2% 5% 5% 5%; } }
 
 .pic:hover {
   transform: scale(1.1);
