--- a/sass/modules/_index.scss
+++ b/sass/modules/_index.scss
@@ -802,6 +802,9 @@ footer {
             }
         }
     }
+    .smallbox{
+        display: none;
+    }
     .hintbox {
         position: absolute;
         width: 80%;
@@ -843,7 +846,7 @@ footer {
         margin: 50px auto 0 auto;
         display: flex;
         justify-content: space-around;
-        flex-wrap: wrap;
+        // flex-wrap: wrap;
         img {
             &:hover {
                 cursor: pointer;
