--- a/sass/modules/_index.scss
+++ b/sass/modules/_index.scss
@@ -787,6 +787,9 @@ footer {
     .smallask{
         display: none;
     }
+    .phone{
+        display: none;
+    }
     .boxcontainer {
         display: inline-flex;
         justify-content: space-around;
