--- a/sass/respond/_indexSmall.scss
+++ b/sass/respond/_indexSmall.scss
@@ -14,6 +14,11 @@
             input {
                 font-size: 16px;
             }
+            #searchBar{
+                display: flex;
+                justify-content: center;
+                flex-wrap: wrap;
+            }
         }
     }
     .game-point {
@@ -126,11 +131,11 @@
             height: 70vh;
             .arrowLeft {
                 display: block;
-                top: 45vh;
+                top: 20vh;
             }
             .arrowRight {
                 display: block;
-                top: 45vh;
+                top: 20vh;
             }
         }
         ul.prod-list {
