--- a/css/Cat_ShoppingStore.css
+++ b/css/Cat_ShoppingStore.css
@@ -617,8 +617,7 @@ h2 {
   background-color: #fff;
   margin-top: 1%;
   text-align: center;
-  margin-bottom: 10%;
-  padding-bottom: 6%; }
+  margin-bottom: 10%; }
 
 .product2 {
   width: 30%;
