--- a/sass/modules/_index.scss
+++ b/sass/modules/_index.scss
@@ -778,7 +778,7 @@ footer {
     .ask {
         width: 40%;
         margin: auto;
-        padding-right: 3%;
+        padding-right: 2%;
         img {
             width: 100%;
             margin: auto;
@@ -797,14 +797,16 @@ footer {
         width: 80%;
         #rightbox,
         #leftbox {
-            width: 50%;
+            width: 45%;
+            margin-top: -150px;
             img {
                 width: 100%;
             }
         }
         .centerbox {
+            margin-top: 50px;
             img {
-                width: 70%;
+                width: 80%;
             }
         }
     }
