刪除分類的加入購物車按鈕

--- a/css/Cat_ShoppingStore.css
+++ b/css/Cat_ShoppingStore.css
@@ -622,8 +622,7 @@ h2 {
 .product2 {
   width: 30%;
   margin: 1.66666%;
-  margin-bottom: 4%;
-  padding-bottom: 8%; }
+  margin-bottom: 4%; }
 
 #pdContent {
   position: relative; }
