--- a/css/backIndex.css
+++ b/css/backIndex.css
@@ -122,36 +122,40 @@ table {
       background-color: transparent;
       border-color: transparent; } }
 
+* {
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box; }
+
 body {
   background-image: url("../images/back/backIMG.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center center;
-  height: 80vh;
-  background-size: cover; }
+  height: 100vh;
+  background-size: cover;
+  position: relative; }
 
 .block {
   text-align: center; }
 
 .loginBox {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 30%;
   width: 300px;
   margin: 0 auto;
-  margin-top: 20%;
   text-align: center;
   background-color: rgba(238, 238, 238, 0.9);
-  border-radius: 10px; }
+  border-radius: 10px;
+  padding: 15px; }
   .loginBox h1 {
     margin-top: 20px; }
   .loginBox input {
-    margin: 20px auto;
+    margin: 20px 6px;
     outline: none; }
-  .loginBox input[type=submit] {
-    margin-top: 6px;
-    padding: 2px 12px;
-    font-size: 12px; }
 
 @media screen and (max-width: 600px) {
   body {
-    background-position: left center; }
-  .loginBox {
-    margin-top: 35%; } }
+    background-position: left center; } }
