--- a/sass/guide.scss
+++ b/sass/guide.scss
@@ -2,6 +2,8 @@
 @import 'base/_var.scss';
 @import 'base/_font.scss';
 @import 'base/_boxsizing.scss';
+@import 'mixins/_rwd.scss';
 @import 'mixins/_afterClear.scss';
 @import 'base/_font.scss';
 @import './modules/_guide.scss';
+@import './respond/_guideSmall.scss';
